[gd_scene load_steps=7 format=3 uid="uid://imus1lp6s284"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_82ydj"]
[ext_resource type="Texture2D" uid="uid://1r7r4dmhj60p" path="res://Assets/UI/PH_Grassy_Mountains.png" id="1_bf0be"]
[ext_resource type="Texture2D" uid="uid://ku4ov5d4ng2i" path="res://Assets/UI/Jammio icon.png" id="3_dr4yb"]

[sub_resource type="SystemFont" id="SystemFont_g6c5v"]
font_names = PackedStringArray("Onyx")

[sub_resource type="SystemFont" id="SystemFont_t6fqe"]
font_names = PackedStringArray("Onyx")

[sub_resource type="SystemFont" id="SystemFont_lhj5e"]
font_names = PackedStringArray("Onyx")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_82ydj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bf0be")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="GameTitleContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Game Title" type="Label" parent="MarginContainer/GameTitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_g6c5v")
theme_override_font_sizes/font_size = 128
text = "Harmony Garden"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/GameTitleContainer"]
layout_mode = 2

[node name="MenuButtonContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuButtonContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/MenuButtonContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/MenuButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("SystemFont_t6fqe")
theme_override_font_sizes/font_size = 32
text = "Play Game"
icon_alignment = 1
expand_icon = true

[node name="Seperator2" type="Control" parent="MarginContainer/MenuButtonContainer/VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="MarginContainer/MenuButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("SystemFont_lhj5e")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Seperator3" type="Control" parent="MarginContainer/MenuButtonContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="MarginContainer/MenuButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = SubResource("SystemFont_t6fqe")
theme_override_font_sizes/font_size = 32
text = "Exit Game"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false

[node name="JammioLogo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="JammioLogo"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_dr4yb")
expand_mode = 1

[connection signal="pressed" from="MarginContainer/MenuButtonContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButtonContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
